[#108429] Added missing test