@@ -1,7 +1,6 @@
 package nu.ndw.nls.accessibilitymap.accessibility.service.debug.configuration;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
@@ -17,7 +16,7 @@ public class DebugConfiguration {
 
     private boolean enabled;
 
-    private Path debugFolder = Paths.get("./.debug");
+    private Path debugFolder = Path.of("./.debug");
 
     public boolean isDisabled() {
         return !enabled;
